...
                    .accessibility(identifier: "introductionLabel")

                Spacer()

                NavigationLink(destination: SignUpNameView(navBarHidden: $navBarHidden)) {

                    Text("Sign Up")
                        .frame(width: 100)
                        .font(.headline)
                        .padding()
                        .cornerRadius(40)
                        .foregroundColor(Color.teal)
                }
...

                Spacer()
                    .frame(height: 25)

                // TODO(): Might need color adjustment on dark mode
                NavigationLink(destination: LogInView(navBarHidden: $navBarHidden)) {
                    Text("Already have an account? Log in.")
                        .foregroundColor(Color.gray)
                        .accessibilityIdentifier("introductionLogin")
                }

            }
            .onAppear() {
...
