...

                Spacer()

                DatePicker("Date of Birth", selection: $model.dob, displayedComponents: [.date])
                    .padding()
                    .foregroundColor(.white)
                    .accessibility(identifier: "dob_picker")
                
                Spacer()

                Button(action: {
                    self.model.validateDOB()
                }) {
...
